--- a/styles.css
+++ b/styles.css
@@ -28,50 +28,13 @@ body {
   font-style: normal;
 }
 
-section {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 100px;
-}
-
-section p {
-  font-size: 2em;
-  color: #fff;
-}
-
 div {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.see {
-  position: relative;
-  color: #444;
-  font-size: 6em;
-  display: none;
-  line-height: 1em;
-}
-
-.see::before {
-  content: attr(data-text);
-  position: absolute;
-  width: 0%;
-  color: #ffffff;
-  overflow: hidden;
-  height: 100%;
-  transition: 1s all ease;
-}
-
-h2.see:hover::before {
-  width: 100%;
-}
-
-.title {
+.TitreDepartMain {
   padding-top: 60px;
   margin-bottom: 60px;
   padding-bottom: 35px;
@@ -81,7 +44,7 @@ h2.see:hover::before {
   font-size: 5rem;
 }
 
-.surname {
+.Surname {
   position: absolute;
   font-size: 23px;
   background: #b55ace;
@@ -93,20 +56,31 @@ h2.see:hover::before {
   border-radius: 7px;
 }
 
-.divsurname {
+.DivSurname {
   background: #edafff;
   padding: 6px;
   border-radius: 7px;
   position: relative;
 }
 
-.cursorsurname {
+.CursorSurname {
   background-color: #b55ace;
   height: 100px;
   width: 5px;
   display: inline-block;
   position: absolute;
+  animation: CursorAnimation 3s ease-in-out normal;
 }
+
+@keyframes CursorAnimation {
+  0% {
+    transform: translateX(-100px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
 
 .imagesNumbers {
   position: fixed;
@@ -149,57 +123,49 @@ h2.see:hover::before {
 }
 
 /* Animation---------------------------------------------------------- */
-.middle {
+.DivGlobalAnimation {
   z-index: 9999;
   width: 100vw;
   height: 100vh;
   background: rgba(255, 255, 255, 1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
   perspective: 1000px;
   position: absolute;
- /* display: none; /* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
+  display: none; /* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
 }
 
-.rounded {
+.DivRoundAnimation {
   opacity: 0;
   border-radius: 50%;
   border: 3px solid #cd0a41;
   width: 500px;
   height: 500px;
   background: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
 }
 
-.middleLogo {
+.DivTextAnimation {
   width: 100%;
   height: 100%;
   z-index: 99;
 }
 
-.rounded > .middleLogo > p {
+.DivRoundAnimation > .DivTextAnimation > p {
   color: #fbd069;
   margin: 0;
   line-height: 1;
   opacity: 0;
+  text-align: center;
   font-size: 325px;
   font-family: "Bad Script", cursive;
   font-weight: 400;
   font-style: normal;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: rgba(51, 40, 40, 0.5);
   width: 100%;
   height: 100%;
   border-radius: 100%;
 }
 
-.rounded > img {
+.DivRoundAnimation > img {
   border-radius: 100%;
   width: 90%;
   width: inherit;
@@ -207,16 +173,13 @@ h2.see:hover::before {
   opacity: 0;
 }
 /* FIN Animation---------------------------------------------------------- */
-
 .qualitydiv {
-  display: flex;
   position: relative;
   flex-direction: column;
 }
 
 .illustration {
   position: relative;
-  display: flex;
   overflow: hidden;
   height: 300px;
   width: 300px;
@@ -301,9 +264,6 @@ h2.see:hover::before {
 }
 
 .final {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   flex-direction: column;
   width: 100%;
