--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,6 @@ div {
   background: rgba(255, 255, 255, 1);
   perspective: 1000px;
   position: absolute;
-  display: none; /* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
 }
 
 .DivRoundAnimation {
@@ -380,5 +379,14 @@ div {
   }
   .imagesNumbers {
     width: 150px;
+  }
+
+  .DivRoundAnimation {
+    width: 200px;
+    height: 200px;
+  }
+
+  .DivRoundAnimation > .DivTextAnimation > p {
+    font-size: 125px;
   }
 }
